--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,7 @@ variables:
   k8sNamespaceForPR: 'review-app-$(System.PullRequest.PullRequestId)'
 
 stages:
+
 - stage: Build
   displayName: Build stage
   jobs:
@@ -33,6 +34,13 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
+    - task: SonarQubePrepare@5
+      inputs:
+       SonarQube: 'Sonarqube'
+       scannerMode: 'CLI'
+       configMode: 'manual'
+       cliProjectKey: 'API_Management_API_Management_AYTR33f6Wx4KMGgPHRJR'
+       cliSources: '.'
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
@@ -42,6 +50,11 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+    
+    - task: SonarQubeAnalyze@5
+    - task: SonarQubePublish@5
+      inputs:
+        pollingTimeoutSec: '300'
 
     - upload: manifests
       artifact: manifests
